<resources>
    <string name="app_name">GPA_Hannumc1_Calculator</string>
    <string name="GPALabel1">Course 1 GPA</string>
    <string name="GPALabel2">Course 2 GPA</string>
    <string name="GPALabel3">Course 3 GPA</string>
    <string name="GPALabel4">Course 4 GPA</string>
    <string name="GPALabel5">Course 5 GPA</string>
    <string name="GPAInput1">GPA 1</string>
    <string name="GPAInput2">GPA 2</string>
    <string name="GPAInput3">GPA 3</string>
    <string name="GPAInput4">GPA 4</string>
    <string name="GPAInput5">GPA 5</string>
    <string name="CalcGPAButton">Calculate GPA</string>
    <string name="DispGPA">Your GPA</string>
</resources>
